force-app/main/default/objects/Audit_Register__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audit Registers</relationshipLabel>
    <relationshipName>Audit_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>