force-app/main/default/objects/Audit_Register__c/fields/Audit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Audit_Fee__c</fullName>
    <formula>Project__r.CT_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>