force-app/main/default/objects/Audit_Register__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audit Registers (Client Code)</relationshipLabel>
    <relationshipName>Audit_Registers_Client_Code</relationshipName>
    <type>Lookup</type>
</CustomField>