force-app/main/default/objects/Audit_Register__c/fields/Date_Audit_Register_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Audit_Register_Signed__c</fullName>
    <label>Date Audit Register Signed</label>
    <type>Date</type>
</CustomField>