force-app/main/default/objects/Audit_Register__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trustees’ Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Unaudited Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Trustees’ Annual Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Annual Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Financial Statements</fullName>
            </value>
            <value>
                <fullName>Annual Report and Accounts</fullName>
            </value>
            <value>
                <fullName>Annual Report of the Trustees</fullName>
            </value>
            <value>
                <fullName>Consolidated Annual Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Consolidated Financial Statements</fullName>
            </value>
            <value>
                <fullName>Directors’ Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Director’s Report and Accounts</fullName>
            </value>
            <value>
                <fullName>Dormant Accounts</fullName>
            </value>
            <value>
                <fullName>Dormant Financial Statements</fullName>
            </value>
            <value>
                <fullName>Final Trustee Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Governors’ Report and Financial Statements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>