force-app/main/default/objects/Audit_Register__c/fields/Documents_Other_More_info__c.field-meta.xml
<CustomField>
    <fullName>Documents_Other_More_info__c</fullName>
    <label>Documents Other More info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>