force-app/main/default/objects/Audit_Register__c/fields/EQR_Completed__c.field-meta.xml
<CustomField>
    <fullName>EQR_Completed__c</fullName>
    <label>EQR Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>