force-app/main/default/objects/Audit_Register__c/fields/Is_the_Client_an_OEP__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Client_an_OEP__c</fullName>
    <label>Is the Client an OEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>