force-app/main/default/objects/Audit_Register__c/fields/Nature_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Entity__c</fullName>
    <label>Nature of Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>