force-app/main/default/objects/Audit_Register__c/fields/Non_Audit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Non_Audit_Fee__c</fullName>
    <label>Non-Audit Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>