force-app/main/default/objects/Audit_Register__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audit Registers (Parent Company)</relationshipLabel>
    <relationshipName>Audit_Registers1</relationshipName>
    <type>Lookup</type>
</CustomField>