force-app/main/default/objects/Audit_Register__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Audit Registers</relationshipLabel>
    <relationshipName>Audit_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>