force-app/main/default/objects/Audit_Register__c/fields/Reason_for_EQR_and_EQR_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_EQR_and_EQR_Reporter__c</fullName>
    <label>Reason for EQR and EQR Reporter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>