force-app/main/default/objects/Audit_Register__c/fields/Report_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Report_Qualified__c</fullName>
    <label>Report Qualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>