force-app/main/default/objects/Audit_Register__c/fields/RP_RD__c.field-meta.xml
<CustomField>
    <fullName>RP_RD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RP / RD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Registers2</relationshipName>
    <type>Lookup</type>
</CustomField>