force-app/main/default/objects/Audit_Register__c/fields/Second_RI_Review_By__c.field-meta.xml
<CustomField>
    <fullName>Second_RI_Review_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second RI Review By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>