force-app/main/default/objects/Audit_Register__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line</label>
    <referenceTo>Service_Line__c</referenceTo>
    <relationshipLabel>Audit Registers</relationshipLabel>
    <relationshipName>Audit_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>