force-app/main/default/objects/Audit_Register__c/fields/Technical_Review_By__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Review By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Registers1</relationshipName>
    <type>Lookup</type>
</CustomField>