force-app/main/default/objects/Audit_Register__c/fields/Technical_Reviewer_Required__c.field-meta.xml
<CustomField>
    <fullName>Technical_Reviewer_Required__c</fullName>
    <label>Technical Reviewer Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>