force-app/main/default/objects/Audit_Register__c/fields/Turnover_Audit_Register__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Audit_Register__c</fullName>
    <label>Turnover (Audit Register)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>